fixed header overlapping

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -72,6 +72,7 @@ nav li a {
     height: fit-content;
     width: 1200px;
     padding: 25px;
+    margin-top: 70px;
 }
 
 .our h2 {
